--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,12 +3,14 @@ cmake_minimum_required(VERSION 3.10)
 # Add test executables
 add_executable(allocator_tests
     test_basic_alloc.cpp
+    test_rb_tree.cpp
 )
 
 # Link against gtest
 target_link_libraries(allocator_tests
     
     basic_alloc
+    rb_tree
     GTest::gtest_main
 )
 
