--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 project(hh_alloc)
 
+set(CMAKE_CXX_STANDARD 23)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic -g -O0")
 
@@ -9,7 +10,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic -g -O0")
 
 add_subdirectory(basic-allocator)
 add_subdirectory(rb-tree)
-add_subdirectory(actual-allocator)
+add_subdirectory(halloc)
 # add_subdirectory(smart-allocator)
 
 enable_testing()
