--- a/halloc/CMakeLists.txt
+++ b/halloc/CMakeLists.txt
@@ -4,9 +4,10 @@ project(halloc VERSION 1.0 LANGUAGES CXX)
 add_library(halloc INTERFACE)
 
 target_sources(halloc INTERFACE
-  ${CMAKE_CURRENT_SOURCE_DIR}/src/halloc.ipp
+  ${CMAKE_CURRENT_SOURCE_DIR}/src/Halloc.ipp
+  ${CMAKE_CURRENT_SOURCE_DIR}/src/Block.ipp
   ${CMAKE_CURRENT_SOURCE_DIR}/includes/Block.hpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/includes/halloc.hpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/includes/Halloc.hpp
   ${CMAKE_CURRENT_SOURCE_DIR}/includes.hpp
 )
 
