Added Some Changes

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,7 +5,8 @@ add_executable(allocator_tests
     test_basic_alloc.cpp
     test_rb_tree.cpp
     test_halloc_Block.cpp
-    test_halloc.BlocksContainer.cpp
+    test_halloc_BlocksContainer.cpp
+    test_halloc_Halloc.cpp
 )
 
 # Link against gtest
