Next To add ci with docker, and Doxygen and ghp

--- a/halloc/CMakeLists.txt
+++ b/halloc/CMakeLists.txt
@@ -1,14 +1,13 @@
 project(halloc VERSION 1.0 LANGUAGES CXX)
 
 
-add_library(halloc INTERFACE)
+add_library(halloc STATIC ${CMAKE_CURRENT_SOURCE_DIR}/src/Block.cpp)
 
 target_sources(halloc INTERFACE
-  ${CMAKE_CURRENT_SOURCE_DIR}/src/Halloc.ipp
-  ${CMAKE_CURRENT_SOURCE_DIR}/src/Block.ipp
+
   ${CMAKE_CURRENT_SOURCE_DIR}/includes/Block.hpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/includes/BlocksContainer.hpp
   ${CMAKE_CURRENT_SOURCE_DIR}/includes/Halloc.hpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/includes.hpp
 )
 
 target_include_directories(halloc INTERFACE
