--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,27 +1,36 @@
 name: CI
 
 on:
+  push:
+    branches: [ master, main, develop ]
+  pull_request:
+    branches: [ master, main, develop ]
   workflow_dispatch:
     inputs:
       target:
-        description: "Target job to run (format-check, build-and-test, sanitizer-tests, lint)"
+        description: "Target job to run"
+        type: choice
+        options:
+          - all
+          - format-check
+          - build-and-test
+          - sanitizer-tests
+          - lint
         required: false
         default: "all"
-
-#   push:
-#     branches: [master, main]
-#   pull_request:
-#     branches: [master, main]
 
 jobs:
   format-check:
     name: Check Code Formatting
     runs-on: ubuntu-latest
+    if: github.event_name != 'workflow_dispatch' || github.event.inputs.target == 'format-check' || github.event.inputs.target == 'all'
     steps:
       - uses: actions/checkout@v3
 
       - name: Install clang-format
-        run: sudo apt-get install -y clang-format
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y clang-format
 
       - name: Check formatting
         run: ./scripts.sh format-check
@@ -29,6 +38,7 @@ jobs:
   build-and-test:
     name: Build and Test
     runs-on: ubuntu-latest
+    if: github.event_name != 'workflow_dispatch' || github.event.inputs.target == 'build-and-test' || github.event.inputs.target == 'all'
     steps:
       - uses: actions/checkout@v3
 
@@ -46,9 +56,7 @@ jobs:
   sanitizer-tests:
     name: Sanitizer Tests
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        sanitizer: [address, undefined, leak]
+    if: github.event_name != 'workflow_dispatch' || github.event.inputs.target == 'sanitizer-tests' || github.event.inputs.target == 'all'
     steps:
       - uses: actions/checkout@v3
 
@@ -57,15 +65,28 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y cmake build-essential clang
 
-      - name: Build with ${{ matrix.sanitizer }} sanitizer
-        run: ./scripts.sh sanitize ${{ matrix.sanitizer }}
+      - name: Build with Address Sanitizer
+        run: ./scripts.sh sanitize address
 
       - name: Run tests
-        run: cd out && ctest --output-on-failure
+        run: ./scripts.sh test small-only
+
+      - name: Build with Undefined Behavior Sanitizer
+        run: ./scripts.sh sanitize undefined
+
+      - name: Run tests
+        run: ./scripts.sh test small-only
+
+      - name: Build with Leak Sanitizer
+        run: ./scripts.sh sanitize leak
+
+      - name: Run tests
+        run: ./scripts.sh test small-only
 
   lint:
     name: Static Analysis (clang-tidy)
     runs-on: ubuntu-latest
+    if: github.event_name != 'workflow_dispatch' || github.event.inputs.target == 'lint' || github.event.inputs.target == 'all'
     steps:
       - uses: actions/checkout@v3
 
